istio/istio-virtualservice.yaml
---
# VirtualService for Argo Rollouts traffic management
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: demo-app
spec:
  hosts:
  - "*"
  gateways:
  - demo-app-gateway
  http:
  - name: primary
    route:
    - destination:
        host: dev-demo-app
        subset: stable
        port:
          number: 80
      weight: 100
    - destination:
        host: dev-demo-app
        subset: canary
        port:
          number: 80
      weight: 0
# Made with Bob
